Renamed token and fixed pom.xml

--- a/.github/workflows/package.yaml
+++ b/.github/workflows/package.yaml
@@ -27,5 +27,5 @@ jobs:
       - name: Publish to GitHub Packages
         run: mvn --batch-mode deploy
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
           VERSION: ${{ github.event.inputs.version }}
