--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>com.andersbea.maven-package</artifactId>
-    <version>0.0-SNAPSHOT</version>
+    <groupId>com.andersbea</groupId>
+    <artifactId>maven-package</artifactId>
+    <version>0.0.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
