--- a/service/pom.xml
+++ b/service/pom.xml
@@ -2,19 +2,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>maven-package</artifactId>
+        <groupId>com.andersbea</groupId>
+        <version>0.0.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.andersbea</groupId>
-    <artifactId>maven-package</artifactId>
-    <packaging>pom</packaging>
-    <version>0.0.0-SNAPSHOT</version>
-    <modules>
-        <module>common</module>
-        <module>service</module>
-    </modules>
+    <artifactId>service</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.andersbea</groupId>
+            <artifactId>common</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
+
 </project>
